# ComputeShader_OpenGL

./: CMakeLists.txt  README.md
res/: compute.glsl
src/: ComputeShader.cpp  ComputeShader.h  main.cpp
src/ComputeShader/: ComputeShader.h
